// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render 1`] = `
<div>
  <div
    class="swiper-container swiper-container-initialized swiper-container-horizontal swiper-container-multirow swiper-container-multirow-column"
    style="height: 468px;"
  >
    <div
      class="swiper-wrapper"
      style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div>
          Slider item
        </div>
      </div>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="swiper-notification"
    />
  </div>
</div>
`;

exports[`Slider should render empty rows if template not provided 1`] = `
<div>
  <div
    class="swiper-container swiper-container-initialized swiper-container-horizontal swiper-container-multirow swiper-container-multirow-column"
    style="height: 468px;"
  >
    <div
      class="swiper-wrapper"
      style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="swiper-notification"
    />
  </div>
</div>
`;

exports[`Slider should render pagination 1`] = `
<div>
  <div
    class="swiper-container swiper-container-initialized swiper-container-horizontal swiper-container-multirow swiper-container-multirow-column"
    style="height: 468px;"
  >
    <div
      class="swiper-wrapper"
      style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
    >
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
      <div
        class="swiper-slide"
        style="height: 180px;"
      >
        <div />
      </div>
    </div>
    <div
      class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"
    />
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="swiper-notification"
    />
  </div>
</div>
`;
